<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>elfin_utils</name>
  <version>0.0.1</version>
  <description>Utility package for Elfin robot alignment and calibration nodes.</description>
  <maintainer email="flirizar@gmail.com">francisco</maintainer>
  <license>Apache-2.0</license>

  <!-- Herramientas de compilación -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Dependencias en tiempo de ejecución -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <!-- Dependencias opcionales para depuración y pruebas -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
